# dogdata-rs

./: .codecov.yml  .gitignore  .mise.toml  .release-plz.toml  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: release-plz.yml  tests.yaml
.sqlx/: query-8469792bd25d902d0508337a071a9c6a7baa3897e2f8fba279233cefdb2514e3.json  query-dcc22a6378497d30a55961b8089891923b137c962fbbc8c8d334c4d64c5e6fe3.json
crates/dogdata/: CHANGELOG.md  Cargo.toml  README.md
crates/dogdata-reqwest-middleware/: CHANGELOG.md  Cargo.toml  README.md
crates/dogdata-reqwest-middleware/src/: lib.rs  middleware.rs  otel.rs  reqwest_otel_span_builder.rs  reqwest_otel_span_macro.rs
crates/dogdata-sqlx/: CHANGELOG.md  Cargo.toml  README.md
crates/dogdata-sqlx/src/: execute.rs  lib.rs  query_builder.rs  sqlx_otel_span_macro.rs
crates/dogdata-sqlx/tests/: basic.rs
crates/dogdata-sqlx/tests/fixtures/: users.sql
crates/dogdata/src/: formatter.rs  init.rs  lib.rs  logs.rs  shutdown.rs  tracer.rs
crates/dogdata/src/axum/: http_server.rs  middleware.rs  mod.rs  shutdown.rs
crates/dogdata/src/model/: mod.rs
crates/reqwest-datadog-tracing/: Cargo.toml  README.md
crates/reqwest-datadog-tracing/src/: lib.rs  middleware.rs  otel.rs  reqwest_otel_span_builder.rs  reqwest_otel_span_macro.rs
examples/: Cargo.toml  README.md
examples/examples/: axum.rs  console.rs  reqwest-tracing.rs
testing/: docker-compose.yaml
testing/tests/snapshots/: axum.json  dd.json  req.json  ss.json  sss.json  ssss.json
