[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/flashnetxyz/dogdata-rs"
repository = "https://github.com/flashnetxyz/dogdata-rs.git"
exclude = [
    ".github/",
    "testing/",
    ".codecov.yml",
    ".mise.toml",
    ".mise.lock",
    ".release-plz.toml",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "committed.toml",
    "Makefile",
]

[workspace]
members = [
    "crates/dogdata",
    "crates/dogdata-reqwest-middleware",
    "crates/dogdata-sqlx",
    "examples",
]

resolver = "2"


[workspace.dependencies]
# Async
async-trait = { version = "0.1.51" }
futures = { version = "0.3.31" }
tokio = { version = "1.46.1" }

# HTTP
http = { version = "1.0" }
reqwest = { version = "0.12.22", default-features = false }
reqwest-middleware = { version = ">0.3.0, <0.5.0" }

# OpenTelemetry
opentelemetry = { version = "0.28.0", features = [
    "trace",
], default-features = false }
opentelemetry_sdk = { version = "0.28.0", features = [
    "trace",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
opentelemetry-semantic-conventions = { version = "0.29.0" }

# Datadog
datadog-opentelemetry = { git = "https://github.com/DataDog/dd-trace-rs" }
dd-trace = { git = "https://github.com/DataDog/dd-trace-rs" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Tracing
tracing = { version = "^0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-opentelemetry = { version = "0.28.0" }
tracing-serde = { version = "^0.2.0" }
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json"] }
