[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/flashnetxyz/dogdata-rs"
repository = "https://github.com/flashnetxyz/dogdata-rs.git"
exclude = [
    ".github/",
    "testing/",
    ".codecov.yml",
    ".mise.toml",
    ".mise.lock",
    ".release-plz.toml",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "committed.toml",
    "Makefile",
]

[workspace]
members = ["crates/dogdata", "crates/dogdata-reqwest-middleware", "crates/dogdata-sqlx", "examples"]

resolver = "2"


[workspace.dependencies]
# OpenTelemetry
opentelemetry = { version = "^0.30.0" }
opentelemetry_sdk = { version = "^0.30.0", features = [
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
opentelemetry-semantic-conventions = { version = "^0.30.0" }
opentelemetry-datadog = { version = "0.18.0" }

# Tracing
tracing = { version = "^0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-opentelemetry = { version = "^0.31.0" }
tracing-opentelemetry-instrumentation-sdk = { version = "0.29" }
tracing-serde = { version = "^0.2.0" }
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json"] }

# HTTP
http = { version = "1.0" }
## Clients
reqwest = { version = "0.12.22", default-features = false }
reqwest-middleware = { version = ">0.3.0, <0.5.0" }
## Server
axum = { version = "0.8" }
axum-tracing-opentelemetry = { version = "0.29" }
tower = { version = "0.4" }

# Async
async-trait = { version = "0.1.51" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3" }
pin-project-lite = { version = "0.2" }
tokio = { version = "1.0" }

# Serialization
## JSON
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Misc
chrono = { version = "0.4.33" }
