[package]
name = "dogdata-examples"
version = "0.0.0"
publish = false
edition = "2024"

[features]
default = []

[dev-dependencies]
dogdata = { path = "../crates/dogdata" }
dogdata-reqwest-middleware = { path = "../crates/dogdata-reqwest-middleware" }

tokio = { version = "1.46.1", features = ["full"] }

tracing = { version = "0.1.41" }

reqwest = { version = "0.12.22", features = ["json"]}
reqwest-middleware = { version = "0.4.2"}

serde = { version = "1", features = ["derive"] }
