[package]
name = "dogdata-reqwest-middleware"
version = "0.0.2"
authors = ["Nejc Drobnic <nejc@flashnet.xyz>"]
edition.workspace = true
description = "Tracing middleware for reqwest that uses the current Opentelemetry Context."
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["reqwest", "http", "middleware", "opentelemetry", "tracing", "datadog"]
categories = ["web-programming::http-client"]

[features]
opentelemetry_0_30 = ["opentelemetry_0_30_pkg", "tracing-opentelemetry_0_31_pkg"]
# This feature ensures that both the old (deprecated) and new attributes are published simultaneously.
# By doing so, we maintain backward compatibility, allowing existing code that relies on the old attributes
# to continue functioning while encouraging the transition to the new attributes.
deprecated_attributes = []

[dependencies]
reqwest-middleware = { version = ">0.3.0, <0.5.0" }

anyhow = "1.0.70"
async-trait = "0.1.51"
matchit = "0.8.0"
http = "1"
reqwest = { version = "0.12.0", default-features = false }
tracing = "0.1.26"

opentelemetry_0_30_pkg = { package = "opentelemetry", version = "0.30.0", optional = true }
tracing-opentelemetry_0_31_pkg = { package = "tracing-opentelemetry", version = "0.31.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.0", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros"] }
tracing_subscriber = { package = "tracing-subscriber", version = "0.3.0" }
wiremock = "0.6.0"
reqwest = { version = "0.12.0", features = ["rustls-tls"] }

opentelemetry_sdk_0_30 = { package = "opentelemetry_sdk", version = "0.30.0", features = ["trace"] }
