[package]
name = "dogdata-reqwest-middleware"
version = "0.0.4"
authors = ["Nejc Drobnic <nejc@flashnet.xyz>"]
edition.workspace = true
description = "Tracing middleware for reqwest that uses the current Opentelemetry Context."
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["reqwest", "middleware", "tracing", "datadog"]
categories = ["web-programming::http-client"]

[features]
default = []
opentelemetry_0_30 = [
    "opentelemetry_0_30_pkg",
    "tracing-opentelemetry_0_31_pkg",
]

[dependencies]
# OpenTelemetry
opentelemetry_0_30_pkg = { package = "opentelemetry", version = "0.30.0", optional = true }

# Tracing
tracing = { workspace = true }
tracing-opentelemetry_0_31_pkg = { package = "tracing-opentelemetry", version = "0.31.0", optional = true }

# HTTP
http = { workspace = true }
## Clients
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }

# Async
async-trait = { workspace = true }

# Misc
anyhow = "1.0.70"
matchit = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.0", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros"] }
tracing_subscriber = { package = "tracing-subscriber", version = "0.3.0" }
wiremock = "0.6.0"
reqwest = { version = "0.12.0", features = ["rustls-tls"] }

opentelemetry_sdk_0_30 = { package = "opentelemetry_sdk", version = "0.30.0", features = [
    "trace",
] }
