[package]
name = "dogdata-sqlx"
version = "0.0.1"
authors = ["Nejc Drobnic <nejc@flashnet.xyz>"]
edition.workspace = true
description = "SQLx instrumentation for tracing to Datadog APM via OpenTelemetry"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["database", "sqlx", "tracing", "opentelemetry"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[features]
default = []
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
# Tracing
tracing = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }

sqlx = { version = "0.8.6", default-features = false }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["postgres"] }
