[package]
name = "dogdata"
version = "0.2.0"
authors = ["Nejc Drobnic <nejc@flashnet.xyz>"]
edition.workspace = true
description = "A Rust telementy provider for Datadog"
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["opentelemetry", "tracing", "datadog"]
categories = ["development-tools::debugging"]

[features]
default = []

[dependencies]
# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-datadog = { version = "0.18.0", features = ["reqwest-client"] }

# Tracing
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-serde = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP
## Clients
reqwest = { workspace = true }

# Serialization
## JSON
serde = { workspace = true }
serde_json = { workspace = true }

# Misc
chrono = "^0.4.33"
