[package]
name = "dogdata"
version = "0.2.1"
authors = ["Nejc Drobnic <nejc@flashnet.xyz>"]
edition.workspace = true
description = "A Rust telementy provider for Datadog"
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["opentelemetry", "tracing", "datadog"]
categories = ["development-tools::debugging"]

[features]
default = []
axum = [
    "dep:axum", 
    "dep:http", 
    "dep:tower", 
    "dep:pin-project-lite", 
    "dep:tokio", 
    "dep:futures-util", 
    "dep:tracing-opentelemetry-instrumentation-sdk", 
    "dep:axum-tracing-opentelemetry"
]

[dependencies]
# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-datadog = { version = "0.18.0", features = ["reqwest-client"] }

# Tracing
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-serde = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP
## Clients
reqwest = { workspace = true }

# Serialization
## JSON
serde = { workspace = true }
serde_json = { workspace = true }

# Misc
chrono = "^0.4.33"

# Axum feature dependencies
axum = { version = "0.7", optional = true }
http = { version = "1.0", optional = true }
tower = { version = "0.4", optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio = { version = "1.0", features = ["signal", "macros"], optional = true }
futures-util = { version = "0.3", optional = true }
tracing-opentelemetry-instrumentation-sdk = { version = "0.29", optional = true }
axum-tracing-opentelemetry = { version = "0.29", optional = true }
